--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -1,3 +1,9 @@
 /**
 *   VARIABLES STYLES
 **/
+
+$base-blue: #364F6B;
+$base-dark-blue: #293C51;
+$base-pink: #FC5185;
+$base-cyan: #3FC1C9;
+$backgroud-gray: #F5F5F5;
