--- a/scss/components/_heading.scss
+++ b/scss/components/_heading.scss
@@ -3,11 +3,59 @@
 **/
 
 .heading {
-    color: darkblue;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 
-    span {
-        color: lightskyblue;
+    display: block;
+    position: relative;
+
+    .heading-title-container{
+        min-width: 249px;
+        background: $base-dark-blue;
+        padding: 48px 36px;
+        .heading-title {
+            color: #fff;
+            font-size: 24px;
+        }
+    }
+
+    .heading-text-container{
+        padding-bottom: 48px;
+        padding-left: 36px;
+        padding-right: 36px;
+        .heading-text{
+            font-size: 16px;
+            color:$base-blue;
+
+        }
+    }
+
+    .quote-container{
+        top: -48px;
+    }
+}
+
+@media only screen and (min-width: 48em){
+    .heading{
+        .heading-title-container{
+            padding: 96px 80px;
+            .heading-title {
+                font-size: 32px;
+            }
+        }
+        .heading-text-container{
+            padding-bottom: 144px;
+            padding-left: 80px;
+            padding-right: 80px;
+            .heading-text{
+                font-size: 24px;
+    
+            }
+        }
+        .quote-container{
+            top: -96px;
+        }
     }
 }
