--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -8,4 +8,11 @@
 *   COMPONENTS
 **/
 @import 'components/base';
+@import 'components/quote';
 @import 'components/heading';
+@import 'components/navbar';
+@import 'components/button';
+@import 'components/banner';
+@import 'components/card';
+@import 'components/footer';
+
